Fix no padding on mobile devices on compensation page (#1059)

--- a/src/components/compensations/compensations.module.css
+++ b/src/components/compensations/compensations.module.css
@@ -11,6 +11,10 @@
   gap: 3rem;
   width: 100%;
   max-width: var(--max-content-width-large);
+
+  @media (max-width: 834px) {
+    padding: 10rem 0;
+  }
 }
 
 .text {
